# pypkgtest

./: README.md  pyproject.toml
src/: pyproject.toml
src/nowaktest/: __init__.py  main.py
