[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_nowak"
version = "0.0.1
authors = [
  { name="Nowak", email="" },
]
description = "Nowak example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approvedgit :: MIT License",
    "Operating System :: OS Independent",
]