[project]
name = "example_package_nowak"
version = "0.0.1"
authors = [
  { name="nowak", email="fds@fdsfdasfda.com" },
]
description = "Nowak small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]